--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -21,22 +21,26 @@ jobs:
         with:
           node-version: '16'  # Set your desired Node.js version
 
-      # Step 3: Install dependencies (npm install)
+      # Step 3: Navigate to the directory containing package.json (if needed)
+      - name: Navigate to the correct directory
+        run: cd code  # Modify this based on the actual location of your package.json
+
+      # Step 4: Install dependencies (npm install)
       - name: Install dependencies
         run: |
           npm install  # Install your Node.js dependencies, including Tailwind CSS
 
-      # Step 4: Build Tailwind CSS
+      # Step 5: Build Tailwind CSS
       - name: Build Tailwind CSS
         run: |
           npx tailwindcss build ./src/styles.css -o ./dist/styles.css  # Customize paths if needed
 
-      # Step 5: Run other build commands if you have additional processing (optional)
+      # Step 6: Run other build commands if you have additional processing (optional)
       - name: Build project (optional)
         run: |
           npm run build  # Replace with your build command if you have a custom build step
 
-      # Step 6: Deploy to Firebase Hosting
+      # Step 7: Deploy to Firebase Hosting
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
