--- a/code/package.json
+++ b/code/package.json
@@ -1,10 +1,13 @@
 {
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "autoprefixer": "^10.4.20"
   },
   "scripts": {
-  "build": "tailwindcss build ./public/src/style.css -o ./dist/style.css"
+    "build": "tailwindcss build ./public/src/style.css -o ./dist/style.css"
+  },
+  "dependencies": {
+    "css": "^3.0.0",
+    "daisyui": "^4.12.23",
+    "tailwindcss": "^3.4.17"
   }
 }
